manifests/np-005-network-policy-refers-no-valid-workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    check_path: NetworkPolicy.spec.podSelector|.spec.podSelector
    expected: alert
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-005
    pod-security.kubernetes.io/enforce: restricted
  name: np-005-network-policy-refers-no-valid-workload
  namespace: np-005-network-policy-refers-no-valid-workload
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    check_path: NetworkPolicy.spec.podSelector|.spec.podSelector
    expected: alert
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-005
  name: np-005-network-policy-refers-no-valid-workload
  namespace: np-005-network-policy-refers-no-valid-workload
spec:
  podSelector:
    matchLabels:
      app: does-not-exist
  policyTypes:
    - Egress
    - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    check_path: NetworkPolicy.spec.podSelector|.spec.podSelector
    expected: alert
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-005
  name: np-005-network-policy-refers-no-valid-workload
  namespace: np-005-network-policy-refers-no-valid-workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kalm-benchmark
      check: NP-005
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/app: runtime/default
        container.seccomp.security.alpha.kubernetes.io/pod: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
      labels:
        app.kubernetes.io/part-of: kalm-benchmark
        check: NP-005
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env: []
          image: nginx@sha256:aed492c4dc93d2d1f6fe9a49f00bc7e1863d950334a93facd8ca1317292bf6aa
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
          name: app
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
          resources:
            limits:
              cpu: 1m
              ephemeral-storage: 1Mi
              memory: 1Mi
            requests:
              cpu: 1m
              ephemeral-storage: 1Mi
              memory: 1Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 31337
            runAsNonRoot: true
            runAsUser: 31337
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      nodeSelector:
        kubernetes.io/arch: amd64
      priorityClassName: default-priority
      securityContext:
        runAsGroup: 31337
        runAsNonRoot: true
        runAsUser: 31337
        seLinuxOptions:
          level: s0:c123,c456
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: np-005-network-policy-refers-no-valid-workload-filler-dedicated-sa
